// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/PlusView component Snapshot tests with react-test-renderer plus view is rendered correctly when the user is a plus 1`] = `
<div
  className="PlusView"
>
  <div
    className="row align-center"
  >
    <div
      className="columns"
    >
      <div
        className="PlusView__headingImage"
      />
      <div
        className="PlusView__headingTitle text-center"
      >
        hub_supporter_header_title
      </div>
      <div
        className="PlusView__headingDescription text-center"
      >
        hub_supporter_header_description
      </div>
      <div
        className="PlusView__costContainer flex-container align-middle align-justify"
      >
        <div
          className="PlusView__button button disabled"
        >
          already_subscribed
        </div>
      </div>
    </div>
  </div>
  <div
    className="PlusView--addPaddingTop row small-up-1 large-up-3 align-center"
  >
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon analytics"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_analytics_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_analytics_description
      </div>
    </div>
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon dawnAndGlow"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_dawn_and_glow_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_dawn_and_glow_description
      </div>
    </div>
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon themes"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_themes_and_more_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_themes_and_more_description
      </div>
    </div>
  </div>
  <div
    className="PlusView__manifestoContainer"
  >
    <div
      className="PlusView__manifestoBackground row align-center"
    >
      <div
        className="PlusView__manifestoText columns small-12 medium-10 large-8 text-center"
        dangerouslySetInnerHTML={
          Object {
            "__html": "hub_supporter_manifesto",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/PlusView component Snapshot tests with react-test-renderer plus view is rendered correctly when the user is not a plus 1`] = `
<div
  className="PlusView"
>
  <div
    className="row align-center"
  >
    <div
      className="columns"
    >
      <div
        className="PlusView__headingImage"
      />
      <div
        className="PlusView__headingTitle text-center"
      >
        hub_supporter_header_title
      </div>
      <div
        className="PlusView__headingDescription text-center"
      >
        hub_supporter_header_description
      </div>
      <div
        className="PlusView__costContainer flex-container align-middle align-justify"
      >
        <a
          className="PlusView__button button"
          href="https://checkout.ghosterystage.com/plus?utm_source=gbe&utm_campaign=intro_hub_plus"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          get_ghostery_plus
        </a>
      </div>
    </div>
  </div>
  <div
    className="PlusView--addPaddingTop row small-up-1 large-up-3 align-center"
  >
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon analytics"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_analytics_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_analytics_description
      </div>
    </div>
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon dawnAndGlow"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_dawn_and_glow_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_dawn_and_glow_description
      </div>
    </div>
    <div
      className="PlusView__perk columns text-center"
    >
      <div
        className="PlusView__perkIcon themes"
      />
      <div
        className="PlusView__perkTitle"
      >
        hub_supporter_perk_themes_and_more_title
      </div>
      <div
        className="PlusView__perkDescription"
      >
        hub_supporter_perk_themes_and_more_description
      </div>
    </div>
  </div>
  <div
    className="PlusView__manifestoContainer"
  >
    <div
      className="PlusView__manifestoBackground row align-center"
    >
      <div
        className="PlusView__manifestoText columns small-12 medium-10 large-8 text-center"
        dangerouslySetInnerHTML={
          Object {
            "__html": "hub_supporter_manifesto",
          }
        }
      />
    </div>
  </div>
</div>
`;
